--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -20,5 +20,5 @@ jobs:
       - name: build the image
         run: |
           docker buildx build --push \
-            --tag piwi3910/hello-multiarch:latest \
+            --tag rgnet1/tidal-dl:latest \
             --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm64/v8 .
