--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -21,4 +21,12 @@ jobs:
         run: |
           docker buildx build --push \
             --tag rgnet1/tidal-dl:latest \
-            --platform linux/amd64,linux/arm64/v8,linux/arm .
+            --platform linux/amd64,linux/arm,linux/arm64/v8 .
+
+            - name: Docker Hub Description
+      - name: Update README
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: rgnet1/tidal-dl
