--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -3,6 +3,8 @@ name: Build
 on:
   push:
     branches: main
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   build:
@@ -23,9 +25,9 @@ jobs:
             --tag rgnet1/tidal-dl:latest \
             --platform linux/amd64,linux/arm,linux/arm64/v8 .
 
-      - name: Update README
-        uses: peter-evans/dockerhub-description@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: rgnet1/tidal-dl
+      # - name: Update README
+      #   uses: peter-evans/dockerhub-description@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      #     repository: rgnet1/tidal-dl
