--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -21,7 +21,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the image
         run: |
-          docker buildx build --push \
+          docker buildx build --no-cache --push \
             --tag rgnet1/tidal-dl:latest \
             --platform linux/amd64,linux/arm,linux/arm64/v8 .
 
