--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -12,11 +12,14 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
-      - name: install buildx
+      - name: Set up QEMU
         id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-qemu-action@v1
         with:
           version: latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the image
