--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -8,15 +8,17 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '**/README.md'
+      - README.md
+      - .github/workflows/dockerhub-readme-push.yml
 
 jobs:
-  build:
+  dockerHubReadmePush:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - uses: actions/checkout@v2
       - name: Update README
         uses: peter-evans/dockerhub-description@v2
         with:
