--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -18,10 +18,17 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v2
       - name: Update README
-        uses: peter-evans/dockerhub-description@v2
+        uses: ms-jpq/sync-dockerhub-readme@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: secrets.DOCKER_USERNAME
+          password: secrets.DOCKER_PASSWORD
           repository: rgnet1/tidal-dl
+          readme: "./README.md"
+      # - uses: actions/checkout@v2
+      # - name: Update README
+      #   uses: peter-evans/dockerhub-description@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      #     repository: rgnet1/tidal-dl
