--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -19,18 +19,11 @@ jobs:
           version: latest
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        
+
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the image
         run: |
-          docker buildx build --no-cache --push \
+          docker buildx build --push \
             --tag rgnet1/tidal-dl:latest \
-            --platform linux/amd64,linux/arm,linux/arm64/v8 .
-
-      # - name: Update README
-      #   uses: peter-evans/dockerhub-description@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      #     repository: rgnet1/tidal-dl
+            --platform linux/amd64,linux/arm/v7,linux/arm64 .
