--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -18,13 +18,15 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: checkout code
+        uses: actions/checkout@v2
       - name: Update README
         uses: ms-jpq/sync-dockerhub-readme@v1
         with:
           username: secrets.DOCKER_USERNAME
           password: secrets.DOCKER_PASSWORD
           repository: rgnet1/tidal-dl
-          readme: "./README.md"
+          readme: "README.md"
       # - uses: actions/checkout@v2
       # - name: Update README
       #   uses: peter-evans/dockerhub-description@v2
