--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Update README
         uses: ms-jpq/sync-dockerhub-readme@v1
         with:
-          username: secrets.DOCKER_USERNAME
-          password: secrets.DOCKER_PASSWORD
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           repository: rgnet1/tidal-dl
           readme: "README.md"
       # - uses: actions/checkout@v2
