--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -21,12 +21,12 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
       - name: Update README
-        uses: ms-jpq/sync-dockerhub-readme@v1
+        uses: peter-evans/dockerhub-description@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: rgnet1/tidal-dl
-          readme: "README.md"
+          # readme: "README.md"
       # - uses: actions/checkout@v2
       # - name: Update README
       #   uses: peter-evans/dockerhub-description@v2
