--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -22,9 +22,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the image
         run: |
-          docker buildx build --push \
+          docker buildx build \
             --tag rgnet1/tidal-dl:latest \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 .
+            --platform linux/amd64,linux/arm/v7,linux/arm64 --push .
