--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Readme Update
+name: Push Readme Update to Docker Hub
 
 # Controls when the action will run. 
 on:
@@ -9,14 +9,11 @@ on:
     branches: [ main ]
     paths:
       - README.md
-      - .github/workflows/dockerhub-readme-push.yml
 
 jobs:
-  dockerHubReadmePush:
+  dockerHubPush:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -26,11 +23,3 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
           repository: rgnet1/tidal-dl
-          # readme: "README.md"
-      # - uses: actions/checkout@v2
-      # - name: Update README
-      #   uses: peter-evans/dockerhub-description@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      #     repository: rgnet1/tidal-dl
