--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Multi-Arch Build and Push to DockerHub
 
 on:
   push:
@@ -13,18 +13,33 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+
       - name: Set up QEMU
         id: buildx
         uses: docker/setup-qemu-action@v1
         with:
           version: latest
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - name: build the image
-        run: |
-          docker buildx build \
-            --tag rgnet1/tidal-dl:latest \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 --push .
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: login to docker hub
+      #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      
+      - name: Build and push to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          push: true
+          tags: rgnet1/tidal-dl:latest
+      # - name: build the image
+      #   run: |
+      #     docker buildx build \
+      #       --tag rgnet1/tidal-dl:latest \
+      #       --platform linux/amd64,linux/arm/v7,linux/arm64 --push .
