--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -8,7 +8,7 @@ on:
       - '**.yml'
 
 jobs:
-  build:
+  Build Docker Images:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
@@ -27,7 +27,7 @@ jobs:
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
       # - name: login to docker hub
       #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
