--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
-      # - name: login to docker hub
-      #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v1 
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
+      - name: DockerHub Login
+        run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
       - name: Build and push to DockerHub
         uses: docker/build-push-action@v2
