--- a/.github/workflows/image-build-dev.yml
+++ b/.github/workflows/image-build-dev.yml
@@ -7,7 +7,7 @@ on:
       - layer-minimization
     paths-ignore:
       - '**/README.md'
-      - '**.yml'
+      # - '**.yml'
 
 jobs:
   Docker-Build-Developmnet:
@@ -25,13 +25,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v1 
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
-      - name: Login to DockerHub - Manually
-        run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to DockerHub - Manually
+      #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
       - name: Build and push to DockerHub
         uses: docker/build-push-action@v2
