--- a/.github/workflows/image-build-dev.yml
+++ b/.github/workflows/image-build-dev.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
       # - name: Login to DockerHub - Manually
       #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       
