--- a/.github/workflows/image-build-dev.yml
+++ b/.github/workflows/image-build-dev.yml
@@ -1,4 +1,4 @@
-name: Multi-Arch Build and Push to DockerHub
+name: Build and Push - Development
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
       - layer-minimization
     paths-ignore:
       - '**/README.md'
-      # - '**.yml'
+      - '**.yml'
 
 jobs:
   Docker-Build-Developmnet:
@@ -30,9 +30,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      # - name: Login to DockerHub - Manually
-      #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      
+
       - name: Build and push to DockerHub
         uses: docker/build-push-action@v2
         with:
@@ -40,8 +38,3 @@ jobs:
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
           tags: rgnet1/tidal-dl:development
-      # - name: build the image
-      #   run: |
-      #     docker buildx build \
-      #       --tag rgnet1/tidal-dl:latest \
-      #       --platform linux/amd64,linux/arm/v7,linux/arm64 --push .
