--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -1,4 +1,4 @@
-name: Multi-Arch Build and Push to DockerHub
+name: Build and Push - Production 
 
 on:
   push:
@@ -26,20 +26,13 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_ACTUAL_PASSWORD }}
-      # - name: DockerHub Login
-      #   run: echo "${{ secrets.DOCKER_ACTUAL_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and push to DockerHub
         uses: docker/build-push-action@v2
         with:
           context: .
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           push: true
-          tags: rgnet1/tidal-dl:latest
-      # - name: build the image
-      #   run: |
-      #     docker buildx build \
-      #       --tag rgnet1/tidal-dl:latest \
-      #       --platform linux/amd64,linux/arm/v7,linux/arm64 --push .
+          tags: rgnet1/tidal-dl:development
