--- a/.github/workflows/dockerhub-readme-push.yml
+++ b/.github/workflows/dockerhub-readme-push.yml
@@ -1,10 +1,7 @@
-# This is a basic workflow to help you get started with Actions
+name: Push Readme to Docker Hub
 
-name: Push Readme Update to Docker Hub
-
-# Controls when the action will run. 
+# Only run on README change in main
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
     paths:
@@ -12,11 +9,11 @@ on:
 
 jobs:
   dockerHubPush:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+
       - name: Update README
         uses: peter-evans/dockerhub-description@v2
         with:
