--- a/.github/workflows/image-build-development.yml
+++ b/.github/workflows/image-build-development.yml
@@ -1,6 +1,10 @@
 name: Build and Push - Development
 
 on:
+  workflow_dispatch:
+    branches:
+      - development
+
   push:
     branches:
       - development
